embeddeds/python/pyArduinoML/antlr/ArduinomlParser.py
# Generated from pyArduinoML/antlr/Arduinoml.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class ArduinomlParser ( Parser ):

    grammarFileName = "Arduinoml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'application'", "'SHOW STATE MACHINE'", 
                     "'sensor'", "'actuator'", "':'", "'DEBUG'", "'{'", 
                     "'}'", "'=>'", "'<='", "'IS'", "'AFTER'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'->'", "'AND'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PORT_NUMBER", "IDENTIFIER", "SIGNAL", 
                      "INTEGER", "INITIAL", "OPERATOR", "ANALOGIC_OPERATOR", 
                      "DEBUG_TYPE", "NEWLINE", "WS", "COMMENT" ]

    RULE_root = 0
    RULE_declaration = 1
    RULE_showStateMachine = 2
    RULE_bricks = 3
    RULE_sensor = 4
    RULE_actuator = 5
    RULE_location = 6
    RULE_debug = 7
    RULE_modes = 8
    RULE_initialMode = 9
    RULE_customMode = 10
    RULE_modeTransition = 11
    RULE_states = 12
    RULE_initialState = 13
    RULE_customState = 14
    RULE_action = 15
    RULE_stateTransition = 16
    RULE_expression = 17
    RULE_comparison = 18
    RULE_analogicComparison = 19
    RULE_discreteComparison = 20
    RULE_temporalComparison = 21

    ruleNames =  [ "root", "declaration", "showStateMachine", "bricks", 
                   "sensor", "actuator", "location", "debug", "modes", "initialMode", 
                   "customMode", "modeTransition", "states", "initialState", 
                   "customState", "action", "stateTransition", "expression", 
                   "comparison", "analogicComparison", "discreteComparison", 
                   "temporalComparison" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    PORT_NUMBER=13
    IDENTIFIER=14
    SIGNAL=15
    INTEGER=16
    INITIAL=17
    OPERATOR=18
    ANALOGIC_OPERATOR=19
    DEBUG_TYPE=20
    NEWLINE=21
    WS=22
    COMMENT=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(ArduinomlParser.DeclarationContext,0)


        def bricks(self):
            return self.getTypedRuleContext(ArduinomlParser.BricksContext,0)


        def modes(self):
            return self.getTypedRuleContext(ArduinomlParser.ModesContext,0)


        def EOF(self):
            return self.getToken(ArduinomlParser.EOF, 0)

        def showStateMachine(self):
            return self.getTypedRuleContext(ArduinomlParser.ShowStateMachineContext,0)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = ArduinomlParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.declaration()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ArduinomlParser.T__1:
                self.state = 45
                self.showStateMachine()


            self.state = 48
            self.bricks()
            self.state = 49
            self.modes()
            self.state = 50
            self.match(ArduinomlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def IDENTIFIER(self):
            return self.getToken(ArduinomlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ArduinomlParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = ArduinomlParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(ArduinomlParser.T__0)
            self.state = 53
            localctx.name = self.match(ArduinomlParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowStateMachineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduinomlParser.RULE_showStateMachine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowStateMachine" ):
                listener.enterShowStateMachine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowStateMachine" ):
                listener.exitShowStateMachine(self)




    def showStateMachine(self):

        localctx = ArduinomlParser.ShowStateMachineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_showStateMachine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(ArduinomlParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BricksContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sensor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.SensorContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.SensorContext,i)


        def actuator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.ActuatorContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.ActuatorContext,i)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_bricks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBricks" ):
                listener.enterBricks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBricks" ):
                listener.exitBricks(self)




    def bricks(self):

        localctx = ArduinomlParser.BricksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bricks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ArduinomlParser.T__2]:
                    self.state = 57
                    self.sensor()
                    pass
                elif token in [ArduinomlParser.T__3]:
                    self.state = 58
                    self.actuator()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ArduinomlParser.T__2 or _la==ArduinomlParser.T__3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SensorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(ArduinomlParser.LocationContext,0)


        def debug(self):
            return self.getTypedRuleContext(ArduinomlParser.DebugContext,0)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_sensor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSensor" ):
                listener.enterSensor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSensor" ):
                listener.exitSensor(self)




    def sensor(self):

        localctx = ArduinomlParser.SensorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sensor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(ArduinomlParser.T__2)
            self.state = 64
            self.location()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ArduinomlParser.T__5:
                self.state = 65
                self.debug()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActuatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(ArduinomlParser.LocationContext,0)


        def debug(self):
            return self.getTypedRuleContext(ArduinomlParser.DebugContext,0)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_actuator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActuator" ):
                listener.enterActuator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActuator" ):
                listener.exitActuator(self)




    def actuator(self):

        localctx = ArduinomlParser.ActuatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_actuator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ArduinomlParser.T__3)
            self.state = 69
            self.location()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ArduinomlParser.T__5:
                self.state = 70
                self.debug()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.identifier = None # Token
            self.port = None # Token

        def IDENTIFIER(self):
            return self.getToken(ArduinomlParser.IDENTIFIER, 0)

        def PORT_NUMBER(self):
            return self.getToken(ArduinomlParser.PORT_NUMBER, 0)

        def getRuleIndex(self):
            return ArduinomlParser.RULE_location

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocation" ):
                listener.enterLocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocation" ):
                listener.exitLocation(self)




    def location(self):

        localctx = ArduinomlParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_location)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            localctx.identifier = self.match(ArduinomlParser.IDENTIFIER)
            self.state = 74
            self.match(ArduinomlParser.T__4)
            self.state = 75
            localctx.port = self.match(ArduinomlParser.PORT_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DebugContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.debug_type = None # Token

        def DEBUG_TYPE(self):
            return self.getToken(ArduinomlParser.DEBUG_TYPE, 0)

        def getRuleIndex(self):
            return ArduinomlParser.RULE_debug

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDebug" ):
                listener.enterDebug(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDebug" ):
                listener.exitDebug(self)




    def debug(self):

        localctx = ArduinomlParser.DebugContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_debug)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ArduinomlParser.T__5)
            self.state = 78
            localctx.debug_type = self.match(ArduinomlParser.DEBUG_TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initialMode(self):
            return self.getTypedRuleContext(ArduinomlParser.InitialModeContext,0)


        def customMode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.CustomModeContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.CustomModeContext,i)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_modes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModes" ):
                listener.enterModes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModes" ):
                listener.exitModes(self)




    def modes(self):

        localctx = ArduinomlParser.ModesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_modes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArduinomlParser.IDENTIFIER:
                self.state = 80
                self.customMode()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.initialMode()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArduinomlParser.IDENTIFIER:
                self.state = 87
                self.customMode()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialModeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INITIAL(self):
            return self.getToken(ArduinomlParser.INITIAL, 0)

        def customMode(self):
            return self.getTypedRuleContext(ArduinomlParser.CustomModeContext,0)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_initialMode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialMode" ):
                listener.enterInitialMode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialMode" ):
                listener.exitInitialMode(self)




    def initialMode(self):

        localctx = ArduinomlParser.InitialModeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_initialMode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ArduinomlParser.INITIAL)
            self.state = 94
            self.customMode()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CustomModeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.identifier = None # Token

        def states(self):
            return self.getTypedRuleContext(ArduinomlParser.StatesContext,0)


        def IDENTIFIER(self):
            return self.getToken(ArduinomlParser.IDENTIFIER, 0)

        def modeTransition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.ModeTransitionContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.ModeTransitionContext,i)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_customMode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomMode" ):
                listener.enterCustomMode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomMode" ):
                listener.exitCustomMode(self)




    def customMode(self):

        localctx = ArduinomlParser.CustomModeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_customMode)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            localctx.identifier = self.match(ArduinomlParser.IDENTIFIER)
            self.state = 97
            self.match(ArduinomlParser.T__6)
            self.state = 98
            self.states()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArduinomlParser.T__11 or _la==ArduinomlParser.IDENTIFIER:
                self.state = 99
                self.modeTransition()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(ArduinomlParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModeTransitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.next_mode = None # Token

        def expression(self):
            return self.getTypedRuleContext(ArduinomlParser.ExpressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(ArduinomlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ArduinomlParser.RULE_modeTransition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModeTransition" ):
                listener.enterModeTransition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModeTransition" ):
                listener.exitModeTransition(self)




    def modeTransition(self):

        localctx = ArduinomlParser.ModeTransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_modeTransition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.expression(0)
            self.state = 108
            self.match(ArduinomlParser.T__8)
            self.state = 109
            localctx.next_mode = self.match(ArduinomlParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initialState(self):
            return self.getTypedRuleContext(ArduinomlParser.InitialStateContext,0)


        def customState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.CustomStateContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.CustomStateContext,i)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_states

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStates" ):
                listener.enterStates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStates" ):
                listener.exitStates(self)




    def states(self):

        localctx = ArduinomlParser.StatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_states)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArduinomlParser.IDENTIFIER:
                self.state = 111
                self.customState()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.initialState()
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 118
                    self.customState() 
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialStateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INITIAL(self):
            return self.getToken(ArduinomlParser.INITIAL, 0)

        def customState(self):
            return self.getTypedRuleContext(ArduinomlParser.CustomStateContext,0)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_initialState

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialState" ):
                listener.enterInitialState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialState" ):
                listener.exitInitialState(self)




    def initialState(self):

        localctx = ArduinomlParser.InitialStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_initialState)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ArduinomlParser.INITIAL)
            self.state = 125
            self.customState()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CustomStateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.identifier = None # Token

        def IDENTIFIER(self):
            return self.getToken(ArduinomlParser.IDENTIFIER, 0)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.ActionContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.ActionContext,i)


        def stateTransition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.StateTransitionContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.StateTransitionContext,i)


        def getRuleIndex(self):
            return ArduinomlParser.RULE_customState

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomState" ):
                listener.enterCustomState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomState" ):
                listener.exitCustomState(self)




    def customState(self):

        localctx = ArduinomlParser.CustomStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_customState)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            localctx.identifier = self.match(ArduinomlParser.IDENTIFIER)
            self.state = 128
            self.match(ArduinomlParser.T__6)
            self.state = 130 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 129
                    self.action()

                else:
                    raise NoViableAltException(self)
                self.state = 132 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ArduinomlParser.T__11 or _la==ArduinomlParser.IDENTIFIER:
                self.state = 134
                self.stateTransition()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(ArduinomlParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.receiver = None # Token
            self.value = None # Token

        def IDENTIFIER(self):
            return self.getToken(ArduinomlParser.IDENTIFIER, 0)

        def SIGNAL(self):
            return self.getToken(ArduinomlParser.SIGNAL, 0)

        def getRuleIndex(self):
            return ArduinomlParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = ArduinomlParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            localctx.receiver = self.match(ArduinomlParser.IDENTIFIER)
            self.state = 143
            self.match(ArduinomlParser.T__9)
            self.state = 144
            localctx.value = self.match(ArduinomlParser.SIGNAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateTransitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.next_state = None # Token

        def expression(self):
            return self.getTypedRuleContext(ArduinomlParser.ExpressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(ArduinomlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ArduinomlParser.RULE_stateTransition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateTransition" ):
                listener.enterStateTransition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateTransition" ):
                listener.exitStateTransition(self)




    def stateTransition(self):

        localctx = ArduinomlParser.StateTransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_stateTransition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.expression(0)
            self.state = 147
            self.match(ArduinomlParser.T__8)
            self.state = 148
            localctx.next_state = self.match(ArduinomlParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operator = None # Token

        def comparison(self):
            return self.getTypedRuleContext(ArduinomlParser.ComparisonContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinomlParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ArduinomlParser.ExpressionContext,i)


        def OPERATOR(self):
            return self.getToken(ArduinomlParser.OPERATOR, 0)

        def getRuleIndex(self):
            return ArduinomlParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ArduinomlParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 34
        self.enterRecursionRule(localctx, 34, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.comparison()
            self._ctx.stop = self._input.LT(-1)
            self.state = 158
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ArduinomlParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 153
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 154
                    localctx.operator = self.match(ArduinomlParser.OPERATOR)
                    self.state = 155
                    self.expression(3) 
                self.state = 160
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ComparisonContext(ParserRuleContext):
